Fix spacing

--- a/layouts-builder/index.css
+++ b/layouts-builder/index.css
@@ -107,7 +107,7 @@
 .rlb-resize-handler {
   background: #fff0;
   opacity: 0;
-  width: 40px;
+  width: 20px;
   position: relative;
   flex-grow: 0;
   flex-shrink: 0;
@@ -119,7 +119,7 @@
   border-radius: 10px;
   height: 90%;
   position: absolute;
-  right: 50%;
+  right: 8px;
   top: 5%;
   width: 8px;
   cursor: col-resize;
@@ -217,6 +217,5 @@
 /* PUBLIC ONLY */
 
 .rbl-vert-spacing {
-  padding-top: 8px;
   padding-bottom: 8px;
 }
